frontend/owlvey-frontend-deployment.yaml
apiVersion: v1
kind: Pod
metadata:
  name: site-pod
spec:
  volumes:
  - name: shared-data
    emptyDir: {}
  containers:
  - name: nginx
    image: nginx
    volumeMounts:
    - name: shared-data
      mountPath: /usr/share/nginx/html
  hostNetwork: true
  dnsPolicy: Default

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:    
    tier: frontend    
  name: deploy-site
  namespace: owlvey
spec:
  replicas: 1
  selector:
    matchLabels:
      app: owlvey-site
  template:
    metadata:
      labels:
        app: owlvey-site
    spec:
      containers:
        - name: owlvey-site
          image: owlvey/site:latest
          ports:
            - containerPort: 80
