frontend/owlvey-site-pod-dev.yaml
apiVersion: v1
kind: Pod
metadata:
  name: owlvey-site-pod
  namespace: owlvey
  labels:
    app: owlvey-site-pod-app
spec:
  dnsPolicy: ClusterFirst
  volumes:
  - name: shared-data
    emptyDir: {}
  containers:
  - name: owlvey-site
    image: localhost:48700/owlvey/site:latest
    ports:
        - containerPort: 80
