frontend/owlvey-site-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: site-service
  namespace: owlvey
spec:
  # ClusterIP NodePort LoadBalancer
  type: ClusterIP
  selector:
    app: owlvey-site-pod-app
  ports:
    - name: site
      protocol: TCP      
      port: 80
      targetPort: 80
#     nodePort: 31234
