frontend/owlvey-site-gateway.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: owlvey-ingress
  namespace: owlvey
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:      
      - path: /site
        pathType: Prefix
        backend:
          serviceName: site-service
          servicePort: 47000
